# derivativ

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
core/: config.py
manim_examples/: diagram_animation.py  equation_animation.py  solution_animation.py
manim_examples/media/Tex/: 02c67453cb12fb2e.tex  02f49247a5151c3e.tex  05a6f044896feecf.tex  06808b6420e8f9a6.tex  06e347dbff329283.tex  08aaff75de074634.tex  09e83b1770da86ad.tex  0f6fc8bf87abaa50.tex  124972de76d48e74.tex  12f87f6f9246cb24.tex  137ff5b8172f3f6f.tex  162fe97b7fc3d1ba.tex  17d9ca54937f5053.tex  17dc17b695ab456f.tex  1cf8b8c31431d052.tex  1d592dc3d00b6171.tex  1da8dff5c0b948d4.tex  1dbb311aa9023079.tex  1f1d3a974f6b095d.tex  1fbf29e8551080cc.tex  2015561485bb2cd1.tex  223e3f266995b231.tex  23115f767cbc16ac.tex  2363d3f43371aafc.tex  23bf36b9cf034751.tex  241194127073ff44.tex  26db34b552e48196.tex  270285e0f1bcabd8.tex  28676aa28a0f1bb0.tex  28893d151a573963.tex  2a26e500af3bd0bb.tex  2b001095c3b9c0a4.tex  2b098234fea0a324.tex  3247b861606954b3.tex  33830c1141afad52.tex  35008d9013b43d43.tex  3829241848bad1d9.tex  3abd41ea7b516ca4.tex  3d23be178a4fa19a.tex  3d6b23d48921af7f.tex  (+139 more)
manim_examples/media/videos/diagram_animation/1080p60/partial_movie_files/BinomialToPoissonConvergence/: partial_movie_file_list.txt
manim_examples/media/videos/diagram_animation/480p15/partial_movie_files/BasicDiagram/: partial_movie_file_list.txt
manim_examples/media/videos/solution_animation/1080p60/: WorkedExampleTriangle.srt
manim_examples/media/voiceovers/: cache.json
(+5 files in other folders)
