[project]
name = "derivativ"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "manim>=0.19.0",
    "manim-voiceover[azure,gtts]>=0.3.7",
    "pydantic-settings>=2.9.1",
    "setuptools>=80.8.0",
    "uvicorn>=0.34.2",
]
